checkoffs/lab1/weixinyu/2025-01-09_23-12-29.txt
/Users/josephtan/140e-dumb-autograder/repos/weixinyu
rm -f quine-gen quine-out.c quine.c quine *~
gcc -Og -g -Wall quine-gen.c -o quine-gen
--------------------------------------------
checking that the quine generates itself

1. Generating a quine
./quine-gen < seed.c > quine.c
gcc quine.c -o quine
2. Using quine to generate itself
./quine > quine-out.c
3. Checking generated quine matches quine
diff quine.c quine-out.c
**** Success: Quine matches its output ***
--------------------------------------------

make -C ../step1 clean
rm -f quine-gen quine-out.c quine.c quine *~
make -C ../step2 clean
rm -f  compiler-attacked login-attacked out login compiler trojan-compiler *.o a.out  *~ compiler-attacked.c login-attacked.c out.c temp-out.c
rm -f  trojan-compiler2 *.o *~  cc-attacked cc-attacked2 temp-out.c out login-attacked.c login-attacked attack-quine.c
make -C ../step1
gcc -Og -g -Wall quine-gen.c -o quine-gen
../step1/quine-gen  < attack-seed.c > attack-quine.c
gcc -Og -g -Wall trojan-compiler2.c -o trojan-compiler2

----------------------------------checking that the attack will generate itself
./trojan-compiler2 ../step2/compiler.c -o cc-attacked
./cc-attacked ../step2/compiler.c -o cc-attacked2
diff cc-attacked cc-attacked2
Binary files cc-attacked and cc-attacked2 differ
running check.sh
Binary files cc-attacked and cc-attacked2 differ
user: successful login: <ken>
success: check passed!
make: *** [check] Error 1
./temp-out.c:344:13: error: redefinition of 'compile'
static void compile(char *program, char *outname) {
            ^
./temp-out.c:16:13: note: previous definition is here
static void compile(char *program, char *outname) {
            ^
./temp-out.c:636:5: error: redefinition of 'main'
int main(int argc, char *argv[]) {
    ^
./temp-out.c:308:5: note: previous definition is here
int main(int argc, char *argv[]) {
    ^
2 errors generated.
system failed

Return code: 0
